--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 
     <title>{% block title %} My Site {% endblock %}</title>
 
@@ -73,6 +75,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'order_create' %}">Create Order</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'completed_orders' %}">Complited</a>
+                    </li>
                 </ul>
                 <div class="user-info d-flex align-items-center">
                     {% if user.is_authenticated %}
@@ -81,7 +86,7 @@
                             height="40" class="me-2">
                         {{ user.username }}
                     </span>
-                    <a class="nav-link" href="{% url 'account_logout' %}">>Logout</a>
+                    <a class="nav-link" href="{% url 'account_logout' %}">| Logout</a>
                     {% else %}
                     <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                     {% endif %}
